# resume_bot

./: .dockerignore  .tool-versions  Dockerfile  app.py  apprunner.yaml  avante.md  pyproject.toml
app/: main.py
app/me/: summary.txt
me/: summary.txt
